--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,13 @@
 
 en:
   hello: "Hello world"
+
+en:
+  date:
+    day_names: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]
+    abbr_day_names: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"]
+
+pt:
+  date:
+    day_names: ["domingo", "segunda-feira", "terça-feira", "quarta-feira", "quinta-feira", "sexta-feira", "sábado"]
+    abbr_day_names: ["dom", "seg", "ter", "qua", "qui", "sex", "sáb"]
